# client

./: CMakeLists.txt  config.ini  loginDialog.cpp  loginDialog.h  loginDialog.ui  main.cpp  manageDialog.cpp  manageDialog.h  manageDialog.ui  setDialog.cpp  setDialog.h  setDialog.ui  struct.h  ui_loginDialog.h  ui_manageDialog.h  ui_setDialog.h
